--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,16 +9,27 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".CapitalActivity"></activity>
+        <activity android:name=".DashBoard">
+
+
+
+        </activity>
+
+        <activity android:name=".AddCountry">
+
+        </activity>
+
+        <activity android:name=".CapitalActivity" />
+
         <activity
             android:name=".MainActivity"
             android:label="My Happy Dictionary">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
